# cpp-learn

./: .gitignore  CMakeLists.txt  Human.cpp  Makefile  Worker.h  main.cpp
.github/workflows/: build.yml
include/: StereoCapSync.h
src/: Company.cpp  Company.h  Human.h  Worker.cpp
src/control/: motor.cpp  motor.h
src/modules/socketServer/: WebSocketServer.cpp  WebSocketServer.h
src/stereo/: StereoCapSync.cpp
src/video/: CamCapFrame.cpp  CamCapFrame.h
